--- a/api/report/template/index.html
+++ b/api/report/template/index.html
@@ -40,6 +40,7 @@
                         Show Details
                     </button>
                 </p>
+{% if testResult != 'NOT_RUN' %}
                 <div class="collapse" id="collapseLogEntry">
                     <div class="card card-body">
                         {% for step in result['LogEntry'] %}
@@ -108,6 +109,7 @@
                         {% endfor %}
                     </div>
                 </div>
+{% endif %}
             </div>
         </div>
     </div>
